--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -71,8 +71,29 @@
     accessed = {25.03.2024},
 }
 
-@misc{postnauka,
-	etitle   = {Параллельные корпусы текстов},
-	url      = {\url{https://postnauka.org/video/54851}},
-    accessed = {25.03.2024},
+@article{survey,
+    author = {Khosla, Sonal},
+    year = 2018,
+    month = 08,
+    pages = {13-19},
+    title = {A SURVEY REPORT ON THE EXISTING METHODS OF BUILDING A PARALLEL CORPUS},
+    volume = 9,
+    journal = {International Journal of Advanced Research in Computer Science},
+    doi = {10.26483/ijarcs.v9i4.6171}
+}
+
+@inbook{cl,
+   bookauthor = {В.П. Захаров and С.Ю. Богданова},
+   note = {Корпусная лингвистика: Учебник для студентов направления <<Лингвистика>>. 2-е изд., перераб. и дополн., -- СПб.: СПбГУ. РИО. Филологический факультет, 2013. -- 148 с.},
+   isbn = {978-5-88267-316-0},
+   language = {russian},
+}
+
+@book{cl2022,
+  title={Корпусная лингвистика},
+  author={Захаров, В. and Богданова, С.},
+  isbn={9785042457296},
+  url={\url{https://books.google.ru/books?id=HpTcDwAAQBAJ}},
+  year={2022},
+  publisher={ЛитРес}
 }
