--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -50,6 +50,16 @@
   doi          = {TODO}
 }
 
+@article{butenko2022-2,
+  author       = {Бутенко, Ю.И. and Попова, Н.М.},
+  title        = {Особенности семантической разметки в корпусе научно-технических текстов},
+  journal      = {Проблемы лингвистики и лингводидактики в неязыковом вузе: 5-я Международная научно-практическая конференция},
+  year         = 2022,
+  volume       = 1,
+  pages        = {324--328},
+  doi          = {TODO}
+}
+
 @article{lesnikov2019,
   author       = {Лесников, В.С.},
   title        = {Виды разметок текстовых корпусов русского языка},
@@ -71,6 +81,24 @@
     accessed = {25.03.2024},
 }
 
+@misc{ucrel,
+	etitle   = {University Centre for Computer Corpus Research on Language},
+	url      = {\url{https://ucrel.lancs.ac.uk/usas/}},
+    accessed = {20.05.2024},
+}
+
+@misc{ske,
+	etitle   = {Sketch Engine: Create and search a text corpus},
+	url      = {\url{https://www.sketchengine.eu/}},
+    accessed = {20.05.2024},
+}
+
+@misc{noske,
+	etitle   = {NoSketch Engine},
+	url      = {\url{https://nlp.fi.muni.cz/trac/noske}},
+    accessed = {20.05.2024},
+}
+
 @article{survey,
     author = {Khosla, Sonal},
     year = 2018,
@@ -89,11 +117,9 @@
    language = {russian},
 }
 
-@book{cl2022,
-  title={Корпусная лингвистика},
-  author={Захаров, В. and Богданова, С.},
-  isbn={9785042457296},
-  url={\url{https://books.google.ru/books?id=HpTcDwAAQBAJ}},
-  year={2022},
-  publisher={ЛитРес}
+@inbook{cl2020,
+    bookauthor = {В.П. Захаров and С.Ю. Богданова},
+    note = {Корпусная лингвистика: учебник. 3-е изд., перераб. -- СПб.: Изд-во С.-Петерб. ун-та, 2020. -- 234 с.},
+    isbn = {978-5-288-05997-1},
+    language = {russian},
 }
