add cite, update pdf, remove / in bib

--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -83,13 +83,13 @@
 
 @misc{ucrel,
 	etitle   = {University Centre for Computer Corpus Research on Language},
-	url      = {\url{https://ucrel.lancs.ac.uk/usas/}},
+	url      = {\url{https://ucrel.lancs.ac.uk/usas}},
     accessed = {20.05.2024},
 }
 
 @misc{ske,
 	etitle   = {Sketch Engine: Create and search a text corpus},
-	url      = {\url{https://www.sketchengine.eu/}},
+	url      = {\url{https://www.sketchengine.eu}},
     accessed = {20.05.2024},
 }
 
