add chen stuff and misc

--- a/docs/report/00-introduction.tex
+++ b/docs/report/00-introduction.tex
@@ -2,9 +2,8 @@
 
 В современном мире немаловажное значение имеет корпусная лингвистика.
 Корпуса текстов находят применение в различных областях --- в машинном переводе, в разработке словарей, в лингвистических исследованиях.
-Для того, чтобы из корпуса текстов можно было извлекать какую-то пользу, тексты в нем должны быть размечены.
-Существуют алгоритмы, позволяющие автоматически производить разметку.
-Но зачастую, для проверки ее корректности, все равно требуется вмешательство человека.
+Для того, чтобы из корпуса текстов можно было извлекать пользу, тексты в нем должны быть размечены.
+Существуют алгоритмы, позволяющие автоматически производить разметку, но для проверки ее корректности все равно требуется вмешательство человека.
 
 На данный момент не существует открытых параллельных корпусов технических текстов.
 Также нет открытых информационных систем, позволяющих одновременно
