--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -139,11 +139,37 @@
 
 \subsection{Формализация задачи}
 
+В ходе выполнения курсовой работы необходимо спроектировать и разработать базу данных для хранения документов --- технических текстов на разных языках, их разметок, и информации о пользователях базы данных.
+
+Для взаимодействия с базой данных необходимо разработать интерфейс, предоставляющий возможности
+\begin{itemize}
+    \item добавления новых документов в базу данных,
+    \item добавления новых разметок в базу данных,
+    \item произведения поиска по текстам и разметкам, хранящимся в базе данных.
+\end{itemize}
+
 \subsection{Формализация данных}
 
-\subsection{Сущности базы данных}
+Разрабатываемая база данных должна хранить информацию о следующих сущностях:
+\begin{itemize}
+    \item пользователь;
+    \item документ;
+    \item метаданные о документе --- автор;
+    \item задание на разметку;
+    \item структурная разметка;
+    \item терминологическая разметка.
+\end{itemize}
+
+% \subsection{Сущности базы данных}
 
 % ERD в нотации Чена
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{diag/chen-v3.pdf}
+	\caption{ER-диаграмма в нотации Чена}
+	\label{fig:chen}
+\end{figure}
 
 \subsection{Формализация и описание пользователей}
 
