update chen diagram

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -166,7 +166,7 @@
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=\textwidth]{diag/chen-v3.pdf}
+	\includegraphics[angle=90, width=\textwidth]{diag/chen-v4.pdf}
 	\caption{ER-диаграмма в нотации Чена}
 	\label{fig:chen}
 \end{figure}
