almost all models done; postrelational left

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -263,7 +263,60 @@
 
 \subsubsection{Иерархическая}
 
+Иерархическая база данных состоит из упорядоченной коллекции экземпляров одного типа дерева.
+
+Тип дерева включает один корневой тип записи и упорядоченную коллекцию зависимых (нижнего уровня) типов поддеревьев.
+Тип поддерева, в свою очередь, также состоит из одного типа записи --- корневого типа поддерева --- и упорядоченной коллекции зависимых типов поддеревьев нижнего уровня.
+Таким образом, весь тип дерева представляет собой иерархическую структуру типов записей.~\cite[с. 406]{date-wr}
+
+Основное различие между иерархической и реляционной структурой заключается в следующем: в иерархической базе данных информация, которая в реляционной базе данных представлена внешними ключами, представлена связями <<родитель-ребенок>>.~\cite[с. 408]{date-wr}
+
+Язык манипулирования данными в иерархической базе данных включает операторы для работы с данными в виде деревьев:
+\begin{itemize}
+    \item Нахождение конкретного дерева в базе данных.
+    \item Переход от одного дерева к следующему в иерархической последовательности.
+    \item Перемещение от записи к записи внутри дерева по иерархическим путям.
+    \item Вставка новой записи в дерево.
+    \item Удаление указанной записи.
+\end{itemize}
+
+Эти операторы, как правило, работают на уровне записей (манипулируют отдельными записями (или строками) в базе данных, а не группами записей или целыми наборами данных).~\cite[с. 410]{date-wr}
+
+Иерархическая модель автоматически поддерживает ссылочную целостность по правилу: ни один потомок не может существовать без своего родителя.
+Если удаляется родитель, система удаляет все поддерево.
+Потомок не может быть вставлен без существующего родителя.
+Это эквивалентно соблюдению правил внешнего ключа в реляционной модели.~\cite[с. 411]{date-wr}
+
 \subsubsection{Сетевая}
+
+Сетевая база данных состоит из набора записей и связей --- точнее, из любого числа экземпляров нескольких типов записей и связей.
+Каждый тип связи включает два типа записей: родительский и дочерний.
+Каждый экземпляр связи состоит из одного экземпляра родительского типа записи и упорядоченного набора экземпляров дочернего типа записи.
+Для конкретного типа связи L с родительским типом записи P и дочерним типом записи C справедливо следующее:
+\begin{itemize}
+    \item Каждый экземпляр P является родителем в одном экземпляре L.
+    \item Каждый экземпляр C является дочерней записью в не более чем одном экземпляре L.
+\end{itemize}
+
+Таким образом, сетевую структуру данных можно рассматривать как расширенную форму иерархической структуры данных.
+Основное различие между ними заключается в следующем: в иерархической структуре у дочерней записи есть ровно один родитель; в сетевой структуре у дочерней записи может быть любое количество родителей.~\cite[с. 447]{date-wr}
+
+Язык манипулирования данными в сетевой базе данных состоит из набора операторов для работы с данными, представленными в виде записей и связей.
+Примеры таких операторов включают следующее:
+\begin{itemize}
+    \item Оператор для нахождения конкретной записи по значению какого-либо поля в этой записи;
+    \item Оператор для перехода от родителя к его первому ребенку в какой-либо связи;
+    \item Оператор для перехода от одного ребенка к следующему в какой-либо связи;
+    \item Оператор для перехода от ребенка к родителю в какой-либо связи;
+    \item Оператор для создания новой записи;
+    \item Оператор для удаления существующей записи;
+    \item И так далее.
+\end{itemize}
+
+Эти операторы обычно так же, как и в инвертированных списках, и в иерархической модели, работают на уровне записей.
+
+Сетевая модель, как и иерархическая, включает встроенную поддержку ссылочной целостности через связи.
+Например, можно задать правило, что дочерняя запись не может быть вставлена без существующего родителя.~\cite[с. 452]{date-wr}
 
 \subsubsection{Постреляционная}
 
