choice has been made

--- a/docs/report/01-analytical.tex
+++ b/docs/report/01-analytical.tex
@@ -320,6 +320,15 @@
 
 \subsubsection{Постреляционная}
 
+Постреляционная модель расширяет реляционную модель.
+Она устраняет ограничение на атомарность данных, позволяя использовать поля с многозначными значениями.
+Значения этих полей могут содержать подзначения, и такой набор значений рассматривается как отдельная таблица, встроенная в основную таблицу.~\cite{lecnotes} % XXX actually it's not lecture notes but whatever
+
 \subsubsection{Выбор модели данных}
+
+Как видно по рисунку \ref{fig:chen}, соблюдения строгой иерархии на диаграмме сущностей разрабатываемой базы данных не наблюдается.
+В случае сетевой модели возникают проблемы с выбором <<главного>> элемента, с которого будет осуществляться обход, и с обработкой нескольких путей, ведущих от главного элемента к искомому в случае наличия связи <<многие-ко-многим>>.
+Описанная ранее формализация данных лучше всего укладывается в рамки реляционной модели, поэтому в основе разрабатываемой базы данных будет использоваться именно она.
+Помимо прочего, у реляционной модели есть еще ряд преимуществ --- современные ее реализации могут автоматически обеспечивать целостность данных и оптимизировать запросы, а также поддерживают транзакционность.
 
 \subsection{Вывод}
